// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tests for the Detailed Card component > Clicking the close button hides the component. 1`] = `
<aside
  class="relative w-1/3 bg-lime-700 text-white flex flex-col pt-40 items-center gap-6"
  data-testid="details"
>
  <button
    class="absolute top-14 right-14 flex items-center justify-center w-16 h-16 bg-lime-300 text-4xl p-3 rounded-full"
    data-testid="cross"
  >
    X
  </button>
  <span
    class="loader"
    data-testid="loader"
  />
</aside>
`;

exports[`Tests for the Detailed Card component > Clicking the close button hides the component. 2`] = `null`;

exports[`Tests for the Detailed Card component > Detailed card component correctly displays the detailed card data; 1`] = `
<aside
  class="relative w-1/3 bg-lime-700 text-white flex flex-col pt-40 items-center gap-6"
  data-testid="details"
>
  <button
    class="absolute top-14 right-14 flex items-center justify-center w-16 h-16 bg-lime-300 text-4xl p-3 rounded-full"
    data-testid="cross"
  >
    X
  </button>
  <div>
    <h1
      class="text-5xl font-extrabold text-lime-300 mb-10"
      data-testid="details-h1"
    >
      testCard-0
    </h1>
    <ul
      class="text-3xl font-extrabold"
    >
      <li>
        Avian: 
        Yes
      </li>
      <li>
        Canine: 
        No
      </li>
      <li>
        EarthAnimal: 
        No
      </li>
      <li>
        EarthInsect: 
        No
      </li>
      <li>
        Feline: 
        No
      </li>
    </ul>
  </div>
</aside>
`;

exports[`Tests for the Detailed Card component > Loading indicator is displayed while fetching data 1`] = `
<aside
  class="relative w-1/3 bg-lime-700 text-white flex flex-col pt-40 items-center gap-6"
  data-testid="details"
>
  <button
    class="absolute top-14 right-14 flex items-center justify-center w-16 h-16 bg-lime-300 text-4xl p-3 rounded-full"
    data-testid="cross"
  >
    X
  </button>
  <span
    class="loader"
    data-testid="loader"
  />
</aside>
`;
